--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Random Number Generator</title>
+</head>
+<body>
+    <div class="container">
+        <h1>Random Number Generator</h1>
+        <p id="numberDisplay">Click the button to generate a random number!</p>
+        <button id="generateButton">Generate Number</button>
+    </div>
+    <img src="https://img.freepik.com/premium-photo/background-numbers-from-zero-nine-numbers-texture_333900-9341.jpg" alt="Numbers Background" class="container-image">
+    <script src="script.js"></script> 
+</body>
+</html>
